--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <meta name="keywords" content="Matheus Rodrigues Da Silva, Developer, Web Developer, Full Stack Developer">
   <meta name="author" content="Matheus Rodrigues Da Silva ">
 
+  <script src="https://matheusrodriguessilva.github.io/Meu-Site/main.js"></script>
+  <link href="https://matheusrodriguessilva.github.io/Meu-Site/style.css" rel="stylesheet" /> 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
   <link rel="stylesheet" href="/style.css"/>
 </head>
