--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
   <meta name="description" content="Matheus Rodrigues Da Silva Developer">
   <meta name="keywords" content="Matheus Rodrigues Da Silva, Developer, Web Developer, Full Stack Developer">
   <meta name="author" content="Matheus Rodrigues Da Silva ">
+  
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-178423723-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  <script src="https://matheusrodriguessilva.github.io/Meu-Site/main.js"></script>
+    gtag('config', 'UA-178423723-1');
+  </script>
+
   <link href="https://matheusrodriguessilva.github.io/Meu-Site/style.css" rel="stylesheet" /> 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
   <link rel="stylesheet" href="/style.css"/>
