--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     gtag('config', 'UA-178423723-1');
   </script>
+  <script src="https://matheusrodriguessilva.github.io/Meu-Site/main.js"></script>
 
   <link href="https://matheusrodriguessilva.github.io/Meu-Site/style.css" rel="stylesheet" /> 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
