--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="cardContainer">
           <div class="card">
             <div class="projectImageWrapper">
-              <img class="screenshot" src="/site finans.png" alt="Weight Tracker project screenshot">
+              <img class="screenshot" src="./site finans.png" alt="Weight Tracker project screenshot">
             </div>
             <div class="cardBody">
               <p class="cardTitle">Site Finans</p>
@@ -118,7 +118,7 @@
         <div class="cardContainer">
           <div class="card">
             <div class="projectImageWrapper">
-              <img class="screenshot" src="/headphone.png" alt="Site Saver project screenshot">
+              <img class="screenshot" src="./headphone.png" alt="Site Saver project screenshot">
             </div>
             <div class="cardBody">
               <p class="cardTitle">Site Ecommerce Headphones</p>
@@ -144,7 +144,7 @@
         <div class="cardContainer">
           <div class="card">
             <div class="projectImageWrapper">
-              <img class="screenshot" src="/Baloes.png" alt="Movie Search project screenshot">
+              <img class="screenshot" src="./Baloes.png" alt="Movie Search project screenshot">
             </div>
             <div class="cardBody">
               <p class="cardTitle">Site Paisagem</p>
