--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         You can contact me by filling out the form or through any of the social media platforms listed below:
       </p>
 
-      <form name="contactForm" action="/thankyou" netlify>
+      <form name="contactForm" action="./thankyou" netlify>
         <div class="formGroup">
           <label for="name">Name</label>
           <input type="text" name="name" id="name" placeholder="Enter Name..." required>
@@ -189,7 +189,7 @@
           <textarea name="message" id="message" placeholder="Message..." cols="30" rows="10" required></textarea>
         </div>
 
-        <a href="/thankyou.html" class="btn">Submit</a>
+        <a href="./thankyou.html" class="btn">Submit</a>
 
       </form>
 
