--- a/thankyou.html
+++ b/thankyou.html
@@ -34,6 +34,6 @@
     <a href="index.html" class="btn">Back to Site</a>
   </div>
 
-  <script src="/main.js"></script>
+  <script src="./main.js"></script>
 </body>
 </html>
