--- a/thankyou.html
+++ b/thankyou.html
@@ -19,7 +19,7 @@
         <li><a href="index.html#myWork">My Work</a></li>
         <li><a href="index.html#aboutMe">About</a></li>
         <li><a href="index.html#contact">Contact</a></li>
-        <li><a href="/Matheus Rodrigues Da Silva Developer CV.pdf" target="_blank">Resume</a></li>
+        <li><a href="./Matheus Rodrigues Da Silva Developer CV.pdf" target="_blank">Resume</a></li>
       </ul>
       <div class="burger">
         <div class="line1"></div>
