--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <li><a href="#myWork">My Works</a></li>
       <li><a href="#aboutMe">About</a></li>
       <li><a href="#contact">Contact</a></li>
-      <li><a href="/Matheus Rodrigues Da Silva Developer CV.pdf" target="_blank">CV English</a></li>
-      <li><a href="/Matheus Rodrigues Da Silva Curriculo.pdf" target="_blank">CV Portugues</a></li>
+      <li><a href="./Matheus Rodrigues Da Silva Developer CV.pdf" target="_blank">CV English</a></li>
+      <li><a href="./Matheus Rodrigues Da Silva Curriculo.pdf" target="_blank">CV Portugues</a></li>
     </ul>
     <div class="burger">
       <div class="line1"></div>
@@ -46,7 +46,7 @@
           <a href="#myWork" class="btn animated slideInLeft" id="projectBtn">
             View Projects
           </a>
-          <a href="/Matheus Rodrigues Da Silva CV Ingles e Portugues.pdf" target="_blank" class="btn animated slideInRight"
+          <a href="./Matheus Rodrigues Da Silva CV Ingles e Portugues.pdf" target="_blank" class="btn animated slideInRight"
             id="resumeBtn">
             Resume en-pt
           </a>
