--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Matheus Rodrigues Da Silva</title>
   
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Matheus Rodrigues Da Silva Developer">
   <meta name="keywords" content="Matheus Rodrigues Da Silva, Developer, Web Developer, Full Stack Developer">
   <meta name="author" content="Matheus Rodrigues Da Silva ">
@@ -14,6 +15,15 @@
   <link href="https://matheusrodriguessilva.github.io/Meu-Site/style.css" rel="stylesheet" /> 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
   <link rel="stylesheet" href="https://matheusrodriguessilva.github.io/Meu-Site/style.css"/>
+  <link 
+    rel="stylesheet" 
+    href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" 
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"
+  >
+  <link 
+    rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css"/>
+  <link rel="stylesheet" href="css/style.css" />
   
 </head>
 
