--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link 
     rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css"/>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href=".style.css" />
   
 </head>
 
