--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 
 <head>
-
-  <title>Matheus Rodrigues Da Silva</title>
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="author" content="Matheus Rodrigues Da Silva ">
   <meta name="description" content="Matheus Rodrigues Da Silva Developer">
   <meta name="keywords" content="Matheus Rodrigues Da Silva, Developer, Web Developer, Full Stack Developer">
-  <meta name="author" content="Matheus Rodrigues Da Silva ">
   
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-178423723-1"></script>
   <script>
@@ -29,6 +28,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css"/>
   <link rel="stylesheet" href=".style.css" />
   
+  <title>Matheus Rodrigues Da Silva</title>
 </head>
 
 <body>
@@ -203,7 +203,7 @@
           <textarea name="message" id="message" placeholder="Message..." cols="30" rows="10" required></textarea>
         </div>
 
-        <a href="./thankyou.html" class="btn">Submit</a>
+        <input type="submit" value="Submit" class="btn" id="formSubmit">
 
       </form>
 
@@ -230,10 +230,11 @@
         <span class="phoneSpan">
           <a href="tel:+5511939459423" class="phoneLink">Phone:+5511939459423</a>
         </span>
-
-      </div>
+        </div>
     </section>
   </div>
-</body>
 
+  <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
+  <script src="js/main.js"></script>
+</body>
 </html>
