--- a/index.html
+++ b/index.html
@@ -235,6 +235,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="./main.js"></script>
 </body>
 </html>
