--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -16,17 +14,16 @@
   </script>
   <script src="https://matheusrodriguessilva.github.io/Meu-Site/main.js"></script>
   <link href="https://matheusrodriguessilva.github.io/Meu-Site/style.css" rel="stylesheet" /> 
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
-  <link rel="stylesheet" href="https://matheusrodriguessilva.github.io/Meu-Site/style.css"/>
+  
   <link 
-    rel="stylesheet" 
-    href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" 
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"
-  >
+     rel="stylesheet" 
+     href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" 
+     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
   <link 
     rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css"/>
-  <link rel="stylesheet" href=".style.css" />
+  <link rel="stylesheet" href="./style.css" />
   
   <title>Matheus Rodrigues Da Silva</title>
 </head>
