--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         You can contact me by filling out the form or through any of the social media platforms listed below:
       </p>
 
-      <form name="contactForm" action="./thankyou" netlify>
+      <form name="contactForm" action="./thankyou" Vercel>
         <div class="formGroup">
           <label for="name">Name</label>
           <input type="text" name="name" id="name" placeholder="Enter Name..." required>
@@ -197,7 +197,7 @@
           <textarea name="message" id="message" placeholder="Message..." cols="30" rows="10" required></textarea>
         </div>
 
-        <input type="submit" value="Submit" class="btn" id="formSubmit">
+        <a href="./thankyou.html" class="btn">Submit</a>
 
       </form>
 
