--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
       <h4><a href="#">Matheus Rodrigues Da Silva</a></h4>
     </div>
     <ul class="navLinks">
-      <li><a href="#">Home</a></li>
-      <li><a href="#myWork">My Works</a></li>
-      <li><a href="#aboutMe">About</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="./Matheus Rodrigues Da Silva Developer CV.pdf" target="_blank">CV English</a></li>
+      <li><a href="#">Home</a></li><br>
+      <li><a href="#myWork">My Works</a></li><br>
+      <li><a href="#aboutMe">About</a></li><br>
+      <li><a href="#contact">Contact</a></li><br>
+      <li><a href="./Matheus Rodrigues Da Silva Developer CV.pdf" target="_blank">CV English</a></li><br>
       <li><a href="./Matheus Rodrigues Da Silva Curriculo.pdf" target="_blank">CV Portugues</a></li>
     </ul>
     <div class="burger">
