--- a/thankyou.html
+++ b/thankyou.html
@@ -16,11 +16,12 @@
         <a href="index.html"><h4>Matheus Rodrigues Da Silva</h4></a>
       </div>
       <ul class="navLinks">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="index.html#myWork">My Work</a></li>
-        <li><a href="index.html#aboutMe">About</a></li>
-        <li><a href="index.html#contact">Contact</a></li>
-        <li><a href="./Matheus Rodrigues Da Silva Developer CV.pdf" target="_blank">Resume</a></li>
+        <li><a href="index.html">Home</a></li><br>
+        <li><a href="index.html#myWork">My Work</a></li><br>
+        <li><a href="index.html#aboutMe">About</a></li><br>
+        <li><a href="index.html#contact">Contact</a></li><br>
+        <li><a href="/Matheus Rodrigues Da Silva Developer CV.pdf" target="_blank">CV English</a></li><br>
+        <li><a href="/Matheus Rodrigues Da Silva Developer CV.pdf" target="_blank">CV Portuguese</a></li>
       </ul>
       <div class="burger">
         <div class="line1"></div>
