--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <li><a href="#aboutMe">About</a></li><br>
       <li><a href="#contact">Contact</a></li><br>
       <li><a href="./Matheus Rodrigues Da Silva Developer CV.pdf" target="_blank">CV English</a></li><br>
-      <li><a href="./Matheus Rodrigues Da Silva Curriculo.pdf" target="_blank">CV Portugues</a></li>
+      <li><a href="./Matheus Rodrigues Da Silva Curriculo.pdf" target="_blank">CV Portuguese</a></li>
     </ul>
     <div class="burger">
       <div class="line1"></div>
