--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </a>
           <a href="./Matheus Rodrigues Da Silva CV Ingles e Portugues.pdf" target="_blank" class="btn animated slideInRight"
             id="resumeBtn">
-            Resume en-pt
+            Resume EN-PT
           </a>
         </div><br>
         <ul class="icons">
