--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <textarea name="message" id="message" placeholder="Message..." cols="30" rows="10" required></textarea>
         </div>
 
-        <a href="./thankyou.html" class="btn">Submit</a>
+        <input type="submit" value="Submit" class="btn" id="formSubmit">
 
       </form>
 
