--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         You can contact me by filling out the form or through any of the social media platforms listed below:
       </p>
 
-      <form name="contactForm" action="./thankyou" Vercel>
+      <form name="contactForm" action="./thankyou" netlify>
         <div class="formGroup">
           <label for="name">Name</label>
           <input type="text" name="name" id="name" placeholder="Enter Name..." required>
