--- a/index.html
+++ b/index.html
@@ -196,8 +196,9 @@
           <label for="message">Message</label>
           <textarea name="message" id="message" placeholder="Message..." cols="30" rows="10" required></textarea>
         </div>
-
-        <href="./thankyou.html" input type="submit" value="Submit" class="btn" id="formSubmit">
+        
+         <a href="./thankyou.html" input type="submit" value="Submit" class="btn" id="formSubmit">Submit</a>
+        
       </form>
 
       <div class="contact">
