--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="author" content="Matheus Rodrigues Da Silva ">
   <meta name="description" content="Matheus Rodrigues Da Silva Developer">
-  <meta name="keywords" content="Matheus Rodrigues Da Silva, Developer, Web Developer, Full Stack Developer">
+  <meta name="keywords" content="Matheus Rodrigues Da Silva, Full stack software engineer Developer, Full Stack Developer">
   
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-178423723-1"></script>
   <script>
@@ -49,7 +49,7 @@
     <div class="landingOverlay">
       <header>
         <h1 id="title">Matheus Rodrigues Da Silva</h1>
-        <p id="subHeading">Web Developer</p>
+        <p id="subHeading">Full Stack Software Engineer</p>
         <div class="landingButtons">
           <a href="#myWork" class="btn animated slideInLeft" id="projectBtn">
             View Projects
